    compiler instead of hashing just its size and modification time.

  - Temporary files are now created in the directory they will end up in. This
    makes ccache more friendly to Linux's directory layout.

  - Added support for long command-line options.

  - A CACHEDIR.TAG file is now created in the cache directory. See
    <http://www.brynosaurus.com/cachedir/>.

  - Improved logging.

  - By default, ccache now puts temporary files in CCACHE_DIR/tmp to avoid
    cluttering the top directory.

  - Improved the test suite and added tests for most of the new functionality.
    It's now also possible to specify a subset of tests to run.

  - Standard error output from the compiler is now only stored in the cache if
    it's non-empty.

  - Added installcheck and distcheck make targets.

Bug fixes:

  - Fixed build on FreeBSD.

  - Improved detection of home directory.

  - User-defined CPPFLAGS and LDFLAGS is now respected in the Makefile.

  - Fixed NFS issues.

  - Bail out on profiling flags --coverage, -fprofile-arcs and -ftest-coverage.

  - -MD/-MMD flags without -MT/-MF are now handled correctly.

  - Added support for -Wp,-MD and -Wp,-MMD flags.

  - Corrected LRU cleanup handling of object files.

  - utimes() is now used instead of utime() when available.

  - Non-writable cache directories are now handled gracefully.

  - Corrected documentation about sharing the cache directory.

  - Fixed compilation warnings from GCC 4.3.

  - The command specified by CCACHE_PREFIX is no longer part of the hash.

  - Fixed bad memory access spotted by Valgrind.

  - Removed deprecated constructions from ccache.yo.

Compatibility notes:

  - The statistics counters "files in cache" and "cache size" now only include
    object files (previously, files containing cached standard error output
    were counted as well). Consequently, the "max file" and "max cache size"
    settings now specify thresholds for object files count and size.